--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "firebase-admin": "~5.10.0",
     "firebase-functions": "^0.9.0"
   },
